--- a/package.json
+++ b/package.json
@@ -5,23 +5,18 @@
   "author": "Matan Kushner <hello@matchai.me>",
   "license": "ISC",
   "scripts": {
-    "build": "ncc build index.js --out dist --minify"
+    "format": "npx prettier -w index.js",
+    "build": "esbuild index.js --minify --bundle --outfile=dist/index.js --platform=node"
   },
   "dependencies": {
-    "@octokit/rest": "^19.0.5",
-    "axios": "^1.6.0",
-    "dotenv": "^16.0.3",
+    "@actions/core": "^1.10.1",
+    "@octokit/rest": "^21.0.2",
+    "axios": "^0.19.2",
+    "dotenv": "^16.4.5",
     "wakatime-client": "^2.7.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "0.20.5",
-    "husky": "3.1.0",
-    "prettier": "1.19.1",
-    "pretty-quick": "2.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "esbuild": "^0.23.1",
+    "prettier": "^3.3.3"
   }
 }
