update action path

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Update gist
-        uses: ./action.yml
+        uses: ./
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
